Fixed footer on mobile

--- a/style/main.css
+++ b/style/main.css
@@ -185,7 +185,7 @@ img
 	justify-content: space-between;
 	width: 56vw;
 	margin: 0 auto;
-	margin-bottom: 5vw;
+	margin-bottom: 4vw;
 }
 
 .footer-image-link
